--- a/html/index.html
+++ b/html/index.html
@@ -96,7 +96,7 @@
                 </ul>
             </nav>
         </header>
-        <main class="flex-1 max-w-7xl px-1 mx-auto">
+        <main class="flex-1 max-w-7xl px-1 mx-auto overflow-auto">
             <div class="py-2 md:flex mx-auto">
                 <div class="my-10 pr-10 flex-1">
                     <div class="md:fixed top-28 z-30 md:w-[250px] lg:w-fit">
@@ -164,19 +164,20 @@
                 <div class="py-10 flex-1">
                     <div class="md:border-l-2 md:pl-10">
                         <div
-                            class="hidden md:block w-[10px] h-[10px] bg-white rounded-full relative top-[0px] left-[-46px] ">
+                            class="timeline-content js--fadeInBottom hidden md:block w-[10px] h-[10px] bg-white rounded-full relative top-[0px] left-[-46px] ">
                         </div>
                         <p class="timeline-content js--fadeInRight py-2 text-gray-400">I have
                             completed the <strong class="text-white">Applied
                                 Software
                                 Development</strong>, <strong class="text-white">Applied
-                                Web Development</strong> and <strong class="text-white">Applied Computer Information Systems</strong> certificates at British
+                                Web Development</strong> and <strong class="text-white">Applied Computer Information
+                                Systems</strong> certificates at British
                             Columbia Institute
                             of Technology (BCIT), and I am currently working towards the Computer Systems Diploma.</p>
                     </div>
                     <div class="md:border-l-2 text-2xl md:pl-10 py-2">
                         <div
-                            class="hidden md:block w-[10px] h-[10px] bg-white rounded-full relative top-[22px] left-[-46px] ">
+                            class="timeline-content js--fadeInBottom hidden md:block w-[10px] h-[10px] bg-white rounded-full relative top-[22px] left-[-46px] ">
                         </div>
                         <h2 class="text-2xl">My tech stack</h2>
                     </div>
@@ -220,7 +221,7 @@
                     </div>
                     <div class="md:pl-10 md:border-l-2 text-2xl py-2">
                         <div
-                            class="hidden md:block w-[10px] h-[10px] bg-white rounded-full relative top-[22px] left-[-46px] ">
+                            class="timeline-content js--fadeInBottom hidden md:block w-[10px] h-[10px] bg-white rounded-full relative top-[22px] left-[-46px] ">
                         </div>
                         <h2>Some things I've built...</h2>
                     </div>
@@ -236,11 +237,11 @@
                                         <h3 class="text-xl text-teal-300 pr-1">Company Website</h3>
                                     </div>
                                     <p class="text-gray-400">Official Live Website for Vision Coding Academy in
-                                        Vancouver, BC, Canada that I have single-handedly built in collaboration with
-                                        design references from UI/UX and graphic designers. UI/UX credits to:
-                                        @stephology</p>
-                                    <p class="tertiary-font pt-3">Stack: HTML, CSS, JS, React, Node Express, Vite, 
-                                        PostgreSQL, Bluehost, 
+                                        Vancouver, BC, Canada that my team and I have built, designed, tested, optimized
+                                        and deployed, currently continuously integrating and deploying new features and
+                                        content.</p>
+                                    <p class="tertiary-font pt-3">Stack: HTML, CSS, JS, React, Node Express, Vite,
+                                        PostgreSQL, Bluehost,
                                         Railway</p>
                                 </figcaption>
                             </a>
@@ -365,7 +366,7 @@
                     </div>
                     <div class="md:pl-10 md:border-l-2 text-2xl py-2">
                         <div
-                            class="hidden md:block w-[10px] h-[10px] bg-white rounded-full relative top-[22px] left-[-46px] ">
+                            class="timeline-content js--fadeInBottom hidden md:block w-[10px] h-[10px] bg-white rounded-full relative top-[22px] left-[-46px] ">
                         </div>
                         <h2>Some of my thoughts...</h2>
                     </div>
