--- a/html/index.html
+++ b/html/index.html
@@ -114,8 +114,9 @@
                         <p class="js--fadeInLeft pt-2 text-gray-400">I am a full stack developer based
                             in Vancouver, British Columbia,
                             Canada.</p>
-                        <p class="js--fadeInLeft pb-2 text-gray-400">I build modern websites using React.js, Node.js,
-                            Express.js and Next.js.</p>
+                        <p class="js--fadeInLeft pb-2 text-gray-400">I build modern websites using Typescript, React,
+                            Tanstack, Node,
+                            Hono, Postgres and Bun in a Linux environment.</p>
                         <div class="js--fadeInLeft flex py-5">
                             <div class="rounded-md transition ease-in-out duration-300">
                                 <a href="https://www.linkedin.com/in/sunghun-kim-19244250/?locale=en_US"
