--- a/html/index.html
+++ b/html/index.html
@@ -373,79 +373,18 @@
                     </div>
                     <div class="md:border-l-2 py-2 md:flex max-w-6xl mx-auto">
                         <section>
-                            <article class="timeline-content js--fadeInLeft md:pl-10 py-2">
-
+                            <article class="timeline-content js--fadeInRight py-2">
                                 <figure>
-                                    <a href="./articles/article5.html" class="md:flex">
-                                        <img src="./image/web-frameworks.jpg" alt="Web Frameworks"
-                                            class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                                    <a href="./article8.html" class="md:flex">
+                                        <img src="../image/programming-languages.JPG" alt="ChatGPT" class="md:max-w-60">
                                         <figcaption class="md:pl-10">
-                                            <h2 class="text-xl text-teal-300">Frameworks, Modules and Packages</h2>
-                                            <p>Posted on: January 10, 2024</p>
-                                            <p class="text-gray-400">There's a lot of conflicting opinions among
-                                                engineers out there about the use of web frameworks,
-                                                modules
-                                                and
-                                                libraries.
-                                            </p>
-                                        </figcaption>
-                                    </a>
-                                </figure>
-                            </article>
-                            <article class="timeline-content js--fadeInLeft md:pl-10 py-2">
-
-                                <figure>
-                                    <a href="./articles/article4.html" class="md:flex">
-                                        <img src="./image/programming-languages.JPG" alt="Programming Languages"
-                                            class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
-                                        <figcaption class="md:pl-10">
-                                            <h2 class="text-xl text-teal-300">OOP, Procedural Programming, Data
-                                                Structures and
-                                                Algorithms</h2>
-                                            <p>Posted on: August 7, 2023</p>
-                                            <p class="text-gray-400">It seems every ex-Google ex-Facebook ex-[insert
-                                                FAANG name]
-                                                tech influencer on
-                                                social
-                                                media has their own video on how to become a software developer
-                                                nowadays.
-                                            </p>
-                                        </figcaption>
-                                    </a>
-                                </figure>
-                            </article>
-                            <article class="timeline-content js--fadeInLeft md:pl-10 py-2">
-
-                                <figure>
-                                    <a href="./articles/article3.html" class="md:flex">
-                                        <img src="./image/chatgpt.jpg" alt="ChatGPT"
-                                            class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
-                                        <figcaption class="md:pl-10">
-                                            <h2 class="text-xl text-teal-300">ChatGPT</h2>
-                                            <p>Posted on: April 12, 2023</p>
-                                            <p class="text-gray-400">I'm going to start by being honest and declaring
-                                                that I do
-                                                use chatGPT's or its
-                                                variants's
-                                                help on a regular basis when I develop software.</p>
-                                        </figcaption>
-                                    </a>
-                                </figure>
-                            </article>
-                            <article class="timeline-content js--fadeInLeft md:pl-10 py-2">
-
-                                <figure>
-                                    <a href="./articles/article1.html" class="md:flex">
-                                        <img src="./image/scrum-project-board.jpg" alt="Scrum Project Board"
-                                            class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
-                                        <figcaption class="md:pl-10">
-                                            <h2 class="text-xl text-teal-300">Scrum Project</h2>
-                                            <p>Posted on: April 10, 2023</p>
-                                            <p class="text-gray-400">I recently had the honor of becoming a certified
-                                                Professional Scrum Master I from
-                                                Scrum.org.
-                                                Since then, I onboarded on my first scrum project for an art gallery web
-                                                app.
+                                            <h2 class="text-xl text-teal-300">How Long Does it Take?</h2>
+                                            <p>Posted on: February 4, 2025</p>
+                                            <p class="text-gray-400">How long does it take to get a six-pack? How long
+                                                does it
+                                                take to build physique?
+                                                How long does it take to become a sofware developer? Well, the answer is
+                                                obvious. It depends.
                                             </p>
                                         </figcaption>
                                     </a>
