--- a/html/index.html
+++ b/html/index.html
@@ -116,7 +116,7 @@
                             Canada.</p>
                         <p class="js--fadeInLeft pb-2 text-gray-400">I build modern websites using Typescript, React,
                             Tanstack, Node,
-                            Hono, Postgres and Bun in a Linux environment.</p>
+                            Hono, <br> Postgres and Bun in a Linux environment.</p>
                         <div class="js--fadeInLeft flex py-5">
                             <div class="rounded-md transition ease-in-out duration-300">
                                 <a href="https://www.linkedin.com/in/sunghun-kim-19244250/?locale=en_US"
