--- a/html/index.html
+++ b/html/index.html
@@ -376,7 +376,7 @@
                             <article class="timeline-content js--fadeInRight py-2">
                                 <figure>
                                     <a href="./article8.html" class="md:flex">
-                                        <img src="../image/programming-languages.JPG" alt="ChatGPT" class="md:max-w-60">
+                                        <img src="./image/programming-languages.JPG" alt="ChatGPT" class="md:max-w-60">
                                         <figcaption class="md:pl-10">
                                             <h2 class="text-xl text-teal-300">How Long Does it Take?</h2>
                                             <p>Posted on: February 4, 2025</p>
