--- a/html/index.html
+++ b/html/index.html
@@ -373,18 +373,18 @@
                     </div>
                     <div class="md:border-l-2 py-2 md:flex max-w-6xl mx-auto">
                         <section>
-                            <article class="timeline-content js--fadeInRight py-2">
+                            <article class="timeline-content js--fadeInLeft md:pl-10 py-2">
                                 <figure>
                                     <a href="./articles/article8.html" class="md:flex">
-                                        <img src="./image/programming-languages.JPG" alt="ChatGPT" class="md:max-w-60">
+                                        <img src="./image/programming-languages.JPG" alt="ChatGPT"
+                                            class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                                         <figcaption class="md:pl-10">
                                             <h2 class="text-xl text-teal-300">How Long Does it Take?</h2>
                                             <p>Posted on: February 4, 2025</p>
                                             <p class="text-gray-400">How long does it take to get a six-pack? How long
                                                 does it
                                                 take to build physique?
-                                                How long does it take to become a sofware developer? Well, the answer is
-                                                obvious. It depends.
+                                                How long does it take to become a sofware developer?
                                             </p>
                                         </figcaption>
                                     </a>
