--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -27,7 +27,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
-<body>
+<body class="overflow-x-hidden">
     <div class="flex flex-col min-h-screen mx-auto bg-slate-800 text-white">
         <div id='speedcapture'>
             <div class='ghost face'>
@@ -108,7 +108,9 @@
                                 <div class="flex">
                                     <h3 class="text-xl text-teal-300 pr-1">Company Website </h3>
                                 </div>
-                                <p class="text-gray-400">Official Live Website for Vision Coding Academy in Vancouver, BC, Canada that I have single-handedly built in collaboration with design references from UI/UX and graphic designers. UI/UX credits to: @stephology</p>
+                                <p class="text-gray-400">Official Live Website for Vision Coding Academy in Vancouver,
+                                    BC, Canada that I have single-handedly built in collaboration with design references
+                                    from UI/UX and graphic designers. UI/UX credits to: @stephology</p>
                                 <p class="tertiary-font pt-3">Stack: HTML, CSS, JS, React, Node Express, Vite, Bluehost,
                                     PostgreSQL,
                                     Railway</p>
@@ -151,7 +153,8 @@
                                     that
                                     uses json web
                                     token user authentication and allows users to create financial plans.</p>
-                                <p class="tertiary-font pt-3">Stack: Node, Express, React, ChartJS, Vite, MongoDB, Render</p>
+                                <p class="tertiary-font pt-3">Stack: Node, Express, React, ChartJS, Vite, MongoDB,
+                                    Render</p>
                             </figcaption>
                         </a>
                     </article>
@@ -279,7 +282,7 @@
                                     I have decided to
                                     make a personal
                                     project of building a banking system prototype that also functions as a CRM.</p>
-                                    <p class="tertiary-font pt-3">Stack: Java, WindowBuilder, Swing</p>
+                                <p class="tertiary-font pt-3">Stack: Java, WindowBuilder, Swing</p>
                             </figcaption>
                         </a>
                     </article>
@@ -294,7 +297,8 @@
                             </figure>
                             <figcaption class="md:pl-10">
                                 <h4 class="text-xl text-teal-300">2D ARPG Project</h4>
-                                <p class="text-gray-400">This is actually my third game development project, all written in Python and using
+                                <p class="text-gray-400">This is actually my third game development project, all written
+                                    in Python and using
                                     the pygame
                                     library. This project taught me animations, screen scrolling, and tile generation.
                                     This is still
@@ -311,11 +315,12 @@
                             </figure>
                             <figcaption class="md:pl-10">
                                 <h4 class="text-xl text-teal-300">2D Shoot'em-up Project</h4>
-                                <p class="text-gray-400">This is my second game development project, fully written in Python and using the
+                                <p class="text-gray-400">This is my second game development project, fully written in
+                                    Python and using the
                                     pygame library. I learned to procedurally generate enemies through this project. I
                                     am considering adding more features such as loot drops, upgrades, and boss addition
                                     in the future.</p>
-                                    <p class="tertiary-font pt-3">Stack: Python, Pygame</p>
+                                <p class="tertiary-font pt-3">Stack: Python, Pygame</p>
                             </figcaption>
                         </a>
                     </article>
