--- a/html/contact/index.html
+++ b/html/contact/index.html
@@ -25,7 +25,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
-<body>
+<body class="overflow-x-hidden">
     <div class="flex flex-col min-h-screen mx-auto bg-slate-800 text-white">
         <div id='speedcapture'>
             <div class='ghost face'>
@@ -65,16 +65,29 @@
             </div>
             <nav id="main-nav">
                 <ul class="md:flex">
-                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/index.html">Home</a></li>
-                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/portfolio/index.html">Portfolio</a>
+                    <li
+                        class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../../html/index.html">Home</a>
                     </li>
-                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/articles/index.html">Articles</a>
+                    <li
+                        class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../../html/portfolio/index.html">Portfolio</a>
                     </li>
-                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/about/index.html">About</a>
+                    <li
+                        class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../../html/articles/index.html">Articles</a>
                     </li>
-                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/resume/index.html">Resume</a>
+                    <li
+                        class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../../html/about/index.html">About</a>
                     </li>
-                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/contact/index.html">Contact</a>
+                    <li
+                        class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../../html/resume/index.html">Resume</a>
+                    </li>
+                    <li
+                        class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
+                        <a href="../../html/contact/index.html">Contact</a>
                     </li>
                 </ul>
             </nav>
