--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,7 @@
     <script src="../script/mouse-effect.js" defer></script>
 </head>
 
-<body>
+<body class="overflow-x-hidden">
     <div class="flex flex-col min-h-screen mx-auto bg-slate-800 text-white">
         <div id='speedcapture'>
             <div class='ghost face'>
@@ -96,7 +96,7 @@
                 </ul>
             </nav>
         </header>
-        <main class="flex-1 max-w-7xl px-1 mx-auto overflow-auto">
+        <main class="flex-1 max-w-7xl px-1 mx-auto overflow-hidden">
             <div class="py-2 md:flex mx-auto">
                 <div class="my-10 pr-10 flex-1">
                     <div class="md:fixed top-28 z-30 md:w-[250px] lg:w-fit">
@@ -114,9 +114,11 @@
                         <p class="js--fadeInLeft pt-2 text-gray-400">I am a full stack developer based
                             in Vancouver, British Columbia,
                             Canada.</p>
-                        <p class="js--fadeInLeft pb-2 text-gray-400">I build modern websites using Typescript, React,
+                        <p class="js--fadeInLeft pb-2 text-gray-400 sm:w-[300px] lg:w-[550px]">I build modern websites
+                            using
+                            Typescript, React,
                             Tanstack, Node,
-                            Hono, <br> Postgres and Bun in a Linux environment.</p>
+                            Hono, Postgres and Bun in a Linux environment.</p>
                         <div class="js--fadeInLeft flex py-5">
                             <div class="rounded-md transition ease-in-out duration-300">
                                 <a href="https://www.linkedin.com/in/sunghun-kim-19244250/?locale=en_US"
@@ -182,7 +184,7 @@
                         </div>
                         <h2 class="text-2xl">My tech stack</h2>
                     </div>
-                    <div class="md:border-l-2 ">
+                    <div class="md:border-l-2 overflow-x-hidden">
                         <div class="timeline-content js--fadeInRight md:pl-10 grid grid-cols-3 py-10 ">
                             <a href="https://www.python.org/" target="_blank"><img src="../html/image/python.png"
                                     alt="Python"
@@ -226,7 +228,7 @@
                         </div>
                         <h2>Some things I've built...</h2>
                     </div>
-                    <div class="md:border-l-2">
+                    <div class="md:border-l-2 overflow-x-hidden">
                         <article class="timeline-content js--fadeInLeft md:pl-10 py-10">
                             <a href="https://www.visioncoding.ca/" target="_blank" class="md:flex">
                                 <figure>
@@ -384,7 +386,8 @@
                                             <p class="text-gray-400">How long does it take to get a six-pack? How long
                                                 does it
                                                 take to build physique?
-                                                How long does it take to become a sofware developer?
+                                                How long does it take to become a sofware developer? Well, the answer is
+                                                obvious. It depends.
                                             </p>
                                         </figcaption>
                                     </a>
