--- a/html/resume/index.html
+++ b/html/resume/index.html
@@ -25,7 +25,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
-<body>
+<body class="overflow-x-hidden">
     <div class="flex flex-col min-h-screen mx-auto bg-slate-800 text-white">
         <div id='speedcapture'>
             <div class='ghost face'>
@@ -67,7 +67,8 @@
                 <ul class="md:flex">
                     <li
                         class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
-                        <a href="../../html/index.html">Home</a></li>
+                        <a href="../../html/index.html">Home</a>
+                    </li>
                     <li
                         class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
                         <a href="../../html/portfolio/index.html">Portfolio</a>
