--- a/html/index.html
+++ b/html/index.html
@@ -114,7 +114,7 @@
                         <p class="js--fadeInLeft pt-2 text-gray-400">I am a full stack developer based
                             in Vancouver, British Columbia,
                             Canada.</p>
-                        <p class="js--fadeInLeft pb-2 text-gray-400 sm:w-[300px] lg:w-[550px]">I build modern websites
+                        <p class="js--fadeInLeft pb-2 text-gray-400 sm:w-[300px] lg:w-[550px]">I build modern web apps
                             using
                             Typescript, React,
                             Tanstack, Node,
