--- a/html/index.html
+++ b/html/index.html
@@ -373,13 +373,31 @@
                         </div>
                         <h2>Some of my thoughts...</h2>
                     </div>
-                    <div class="md:border-l-2 py-2 md:flex max-w-6xl mx-auto">
+                    <div class="md:border-l-2 py-2 max-w-6xl mx-auto">
+                        <section>
+                            <article class="timeline-content js--fadeInLeft md:pl-10 py-2">
+                                <figure>
+                                    <a href="./articles/article9.html" class="md:flex">
+                                        <img src="./image/ai.webp" alt="ChatGPT"
+                                            class="md:w-[240px] md:h-[150px] transition-transform ease-in-out duration-300 md:hover:scale-110">
+                                        <figcaption class="md:pl-10">
+                                            <h2 class="text-xl text-teal-300">AI, LLMs, Coding, and Software Development
+                                            </h2>
+                                            <p>Posted on: March 13, 2025</p>
+                                            <p class="text-gray-400">Yet Another Article About AI (YAAAI). This is what
+                                                this is. But not really.
+                                            </p>
+                                        </figcaption>
+                                    </a>
+                                </figure>
+                            </article>
+                        </section>
                         <section>
                             <article class="timeline-content js--fadeInLeft md:pl-10 py-2">
                                 <figure>
                                     <a href="./articles/article8.html" class="md:flex">
                                         <img src="./image/programming-languages.JPG" alt="ChatGPT"
-                                            class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                                            class="md:w-[240px] md:h-[180px] transition-transform ease-in-out duration-300 md:hover:scale-110">
                                         <figcaption class="md:pl-10">
                                             <h2 class="text-xl text-teal-300">How Long Does it Take?</h2>
                                             <p>Posted on: February 4, 2025</p>
