--- a/html/index.html
+++ b/html/index.html
@@ -230,6 +230,25 @@
                     </div>
                     <div class="md:border-l-2 overflow-x-hidden">
                         <article class="timeline-content js--fadeInLeft md:pl-10 py-10">
+                            <a href="https://capyapp-production.up.railway.app/" target="_blank" class="md:flex">
+                                <figure>
+                                    <img src="./image/capyapp.jpg" alt="Vision Coding Academy"
+                                        class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                                </figure>
+                                <figcaption class="md:pl-10">
+                                    <div class="flex">
+                                        <h3 class="text-xl text-teal-300 pr-1">CapyApp</h3>
+                                    </div>
+                                    <p class="text-gray-400">Ultra-modern fully-featured chat app with e2e type safety
+                                        achieved using monorepo architecture, Tanstack router and Tanstack query coupled
+                                        with zod and
+                                        lightning-fast Bun and Hono backend.</p>
+                                    <p class="tertiary-font pt-3">Stack: React, Tanstack, Bun, Hono, Vite, Tailwind,
+                                        PostgreSQL, Railway</p>
+                                </figcaption>
+                            </a>
+                        </article>
+                        <article class="timeline-content js--fadeInLeft md:pl-10 py-10">
                             <a href="https://www.visioncoding.ca/" target="_blank" class="md:flex">
                                 <figure>
                                     <img src="./image/visioncoding.jpg" alt="Vision Coding Academy"
