--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -99,6 +99,25 @@
                 <h2 class="text-4xl text-center py-10">Current Projects</h2>
                 <div id="current-projects-section">
                     <article class="timeline-content js--fadeInLeft py-2 pb-5">
+                        <a href="https://capyapp-production.up.railway.app/" target="_blank" class="md:flex">
+                            <figure>
+                                <img src="../image/capyapp.jpg" alt="Vision Coding Academy"
+                                    class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                            </figure>
+                            <figcaption class="md:pl-10">
+                                <div class="flex">
+                                    <h3 class="text-xl text-teal-300 pr-1">CapyApp</h3>
+                                </div>
+                                <p class="text-gray-400">Ultra-modern fully-featured chat app with e2e type safety
+                                    achieved using monorepo architecture, Tanstack router and Tanstack query coupled
+                                    with zod and
+                                    lightning-fast Bun and Hono backend.</p>
+                                <p class="tertiary-font pt-3">Stack: React, Tanstack, Bun, Hono, Vite, Tailwind,
+                                    PostgreSQL, Railway</p>
+                            </figcaption>
+                        </a>
+                    </article>
+                    <article class="timeline-content js--fadeInLeft py-2 pb-5">
                         <a href="https://www.visioncoding.ca/" target="_blank" class="md:flex">
                             <figure>
                                 <img src="../image/visioncoding.jpg" alt="Vision Coding Academy"
