--- a/html/index.html
+++ b/html/index.html
@@ -185,41 +185,26 @@
                         <h2 class="text-2xl">My tech stack</h2>
                     </div>
                     <div class="md:border-l-2 overflow-x-hidden">
-                        <div class="timeline-content js--fadeInRight md:pl-10 grid grid-cols-3 py-10 ">
-                            <a href="https://www.python.org/" target="_blank"><img src="../html/image/python.png"
-                                    alt="Python"
-                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                            <a href="https://www.java.com/en/" target="_blank"><img src="../html/image/java.png"
-                                    alt="Java"
-                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                            <a href="https://en.wikipedia.org/wiki/C_(programming_language)" target="_blank"><img
-                                    src="../html/image/c.png" alt="C"
-                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-
-                            <a href="https://en.wikipedia.org/wiki/HTML" target="_blank"><img
-                                    src="../html/image/html5.png" alt=""
-                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                            <a href="https://en.wikipedia.org/wiki/CSS" target="_blank"><img
-                                    src="../html/image/css3.png" alt=""
-                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                            <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank"><img
-                                    src="../html/image/javascript.png" alt="JavaScript"
-                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                            <a href="https://en.wikipedia.org/wiki/SQL" target="_blank"><img src="../html/image/sql.png"
-                                    alt="SQL"
-                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                            <a href="https://nodejs.org/en" target="_blank"><img src="../html/image/nodejs.png"
-                                    alt="Node.js"
-                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                        <div class="timeline-content js--fadeInRight md:pl-10 grid grid-cols-3 md:gap-2 py-10 ">
                             <a href="https://react.dev/" target="_blank"><img src="../html/image/Reactjs.png"
                                     alt="React.js"
                                     class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                            <a href="https://expressjs.com/" target="_blank" class="my-auto"><img
-                                    src="../html/image/expressjs.jpg" alt="Express.js"
-                                    class="mx-auto my-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                            <a href="https://nextjs.org/" target="_blank"><img src="../html/image/nextjs.jpg"
-                                    alt="React.js"
+                            <a href="https://tanstack.com/" target="_blank"><img src="../html/image/tanstack.png"
+                                    alt="Tanstack"
                                     class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                            <a href="https://bun.sh/" target="_blank"><img src="../html/image/bun.svg" alt="React.js"
+                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                            <a href="https://hono.dev/" target="_blank"><img src="../html/image/hono.webp" alt="Hono"
+                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                            <a href="https://www.postgresql.org/" target="_blank"><img
+                                    src="https://upload.wikimedia.org/wikipedia/commons/2/29/Postgresql_elephant.svg"
+                                    alt="Postgres"
+                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                            <a href="https://vite.dev/" target="_blank"><img src="../html/image/vite.svg" alt="Vite"
+                                    class="mx-auto w-[100px] lg:w-[75px] transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                            <a href="https://tailwindcss.com/" target="_blank"><img src="../html/image/tailwind.png"
+                                    alt="Tailwind"
+                                    class="mx-auto md:w-[75px] transition-transform ease-in-out duration-300 hover:scale-125"></a>
                         </div>
                     </div>
                     <div class="md:pl-10 md:border-l-2 text-2xl py-2">
