--- a/html/index.html
+++ b/html/index.html
@@ -217,7 +217,7 @@
                         <article class="timeline-content js--fadeInLeft md:pl-10 py-10">
                             <a href="https://capyapp-production.up.railway.app/" target="_blank" class="md:flex">
                                 <figure>
-                                    <img src="./image/capyapp.jpg" alt="Vision Coding Academy"
+                                    <img src="./image/capyapp.jpg" alt="CapyApp"
                                         class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                                 </figure>
                                 <figcaption class="md:pl-10">
