--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -117,6 +117,22 @@
                             </figcaption>
                         </a>
                     </article>
+                    <article class="timeline-content js--fadeInRight py-2 pb-5">
+                        <a href="https://arkhet.com/" target="_blank" class="md:flex">
+                            <figure>
+                                <img src="../image/arkhet.png" alt="Vision Coding Academy"
+                                    class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                            </figure>
+                            <figcaption class="md:pl-10">
+                                <div class="flex">
+                                    <h3 class="text-xl text-teal-300 pr-1">Arkhet</h3>
+                                </div>
+                                <p class="text-gray-400">Prototyping tool that uses generative AI. Fully featured
+                                    canvas, style guides and datasets.</p>
+                                <p class="tertiary-font pt-3">Stack: Undisclosed</p>
+                            </figcaption>
+                        </a>
+                    </article>
                     <article class="timeline-content js--fadeInLeft py-2 pb-5">
                         <a href="https://www.visioncoding.ca/" target="_blank" class="md:flex">
                             <figure>
@@ -136,28 +152,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="timeline-content js--fadeInLeft py-2 pb-5">
-                        <a href="https://codingcapy.github.io/capychat/" target="_blank" class="md:flex">
-                            <figure>
-                                <img src="../image/capychat.jpg" alt="CapyChat"
-                                    class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
-                            </figure>
-                            <figcaption class="md:pl-10">
-                                <div class="flex">
-                                    <h3 class="text-xl text-teal-300 pr-1">Full Stack Chat App </h3>
-                                </div>
-                                <p class="text-gray-400">This project is a fully functional live chat application
-                                    written in Node Express,
-                                    React Vite and PostgreSQL
-                                    that
-                                    uses json web
-                                    token user authentication and socket.io.</p>
-                                <p class="tertiary-font pt-3">Stack: Node, Express, React, socket.io, Vite, PostgreSQL,
-                                    Railway</p>
-                            </figcaption>
-                        </a>
-                    </article>
-                    <article class="timeline-content js--fadeInLeft py-5">
+                    <article class="timeline-content js--fadeInRight py-5">
                         <a href="https://codingcapy.github.io/capy-finance-client/" target="_blank" class="md:flex">
                             <figure>
                                 <img src="../image/capyfinance.jpg" alt="CapyFinance"
@@ -177,7 +172,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="timeline-content js--fadeInRight py-5">
+                    <article class="timeline-content js--fadeInLeft py-5">
                         <a href="https://codingcapy.github.io/cocodogo-client/" target="_blank" class="md:flex">
                             <figure>
                                 <img src="../image/capysocial.jpg" alt="Cocodogo" class="md:max-w-60">
@@ -194,7 +189,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="timeline-content js--fadeInLeft py-5">
+                    <article class="timeline-content js--fadeInRight py-5">
                         <a href="https://capynext.vercel.app/" target="_blank" class="md:flex">
                             <figure>
                                 <img src="../image/capynext.jpg" alt="CapyNext"
@@ -215,7 +210,7 @@
                             </figcaption>
                         </a>
                     </article>
-                    <article class="timeline-content js--fadeInRight py-5">
+                    <article class="timeline-content js--fadeInLeft py-5">
                         <a href="https://codingcapy.github.io/capytech-react" target="_blank" class="md:flex">
                             <figure>
                                 <img src="../image/react-project.jpg" alt="Capytech React" class="md:max-w-60">
