--- a/html/index.html
+++ b/html/index.html
@@ -121,8 +121,7 @@
                             Hono, Postgres and Bun in a Linux environment.</p>
                         <div class="js--fadeInLeft flex py-5">
                             <div class="rounded-md transition ease-in-out duration-300">
-                                <a href="https://www.linkedin.com/in/sunghun-kim-19244250/?locale=en_US"
-                                    target="_blank">
+                                <a href="https://www.linkedin.com/in/paul-sunghun-kim/" target="_blank">
                                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="55" height="55"
                                         viewBox="0 0 64 64" style="fill:#FFFFFF;" class="glow2">
                                         <path
@@ -372,6 +371,25 @@
                         <h2>Some of my thoughts...</h2>
                     </div>
                     <div class="md:border-l-2 py-2 max-w-6xl mx-auto">
+                        <section>
+                            <article class="timeline-content js--fadeInLeft md:pl-10 py-2">
+                                <figure>
+                                    <a href="./articles/article10.html" class="md:flex">
+                                        <img src="./image/software.png" alt="ChatGPT"
+                                            class="md:w-[240px] md:h-[150px] transition-transform ease-in-out duration-300 md:hover:scale-110">
+                                        <figcaption class="md:pl-10">
+                                            <h2 class="text-xl text-teal-300">How to Become a (Decent) Software
+                                                Developer
+                                            </h2>
+                                            <p>Posted on: June 25, 2025</p>
+                                            <p class="text-gray-400">If you play your cards right, it might not take as
+                                                long as you think.
+                                            </p>
+                                        </figcaption>
+                                    </a>
+                                </figure>
+                            </article>
+                        </section>
                         <section>
                             <article class="timeline-content js--fadeInLeft md:pl-10 py-2">
                                 <figure>
