145th commit update credentials

--- a/html/index.html
+++ b/html/index.html
@@ -172,8 +172,9 @@
                             completed the <strong class="text-white">Applied
                                 Software
                                 Development</strong>, <strong class="text-white">Applied
-                                Web Development</strong> and <strong class="text-white">Applied Computer Information
-                                Systems</strong> certificates at British
+                                Web Development</strong>, <strong class="text-white">Applied Computer Information
+                                Systems</strong> and <strong class="text-white">Computer Systems</strong> certificates
+                            at British
                             Columbia Institute
                             of Technology (BCIT), and I am currently working towards the Computer Systems Diploma.</p>
                     </div>
