146th commit update url for chat app

--- a/html/index.html
+++ b/html/index.html
@@ -215,7 +215,7 @@
                     </div>
                     <div class="md:border-l-2 overflow-x-hidden">
                         <article class="timeline-content js--fadeInLeft md:pl-10 py-10">
-                            <a href="https://capyapp-production.up.railway.app/" target="_blank" class="md:flex">
+                            <a href="https://capyapp.up.railway.app/" target="_blank" class="md:flex">
                                 <figure>
                                     <img src="./image/capyapp.jpg" alt="CapyApp"
                                         class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
