--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -99,7 +99,7 @@
                 <h2 class="text-4xl text-center py-10">Current Projects</h2>
                 <div id="current-projects-section">
                     <article class="timeline-content js--fadeInLeft py-2 pb-5">
-                        <a href="https://capyapp-production.up.railway.app/" target="_blank" class="md:flex">
+                        <a href="https://capyapp.up.railway.app/" target="_blank" class="md:flex">
                             <figure>
                                 <img src="../image/capyapp.jpg" alt="Vision Coding Academy"
                                     class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
