--- a/html/index.html
+++ b/html/index.html
@@ -71,7 +71,7 @@
         <header class="md:flex bg-slate-800 py-2 sticky top-0 z-10">
             <div class="flex justify-between px-2">
                 <a href="./index.html"><img src="../html/image/capyness.png" alt="Capytech Icon" class="max-w-10"></a>
-                <button id="hamburger-menu" class="text-3xl md:hidden" id="hamburger-menu">&#127828;</button>
+                <button id="hamburger-menu" class="text-3xl md:hidden">&#127828;</button>
             </div>
             <nav id="main-nav">
                 <ul class="md:flex">
@@ -152,7 +152,6 @@
                                 </a>
                             </div>
                         </div>
-                        </a>
                         <!-- <p>I graduated the University of British Columbia with a Bachelor of Arts in 2014.
                         I have 7+ years of experience working for financial institutions in various roles, starting from
                         bank
@@ -168,6 +167,9 @@
                         <div
                             class="timeline-content js--fadeInBottom hidden md:block w-[10px] h-[10px] bg-white rounded-full relative top-[0px] left-[-46px] ">
                         </div>
+                        <p class="timeline-content js--fadeInRight py-2 text-gray-400">I am a founding engineer of
+                            <strong class="text-white">Arkhet</strong>, a prototyping tool that uses generative AI.
+                        </p>
                         <p class="timeline-content js--fadeInRight py-2 text-gray-400">I have
                             completed the <strong class="text-white">Applied
                                 Software
@@ -185,26 +187,32 @@
                         <h2 class="text-2xl">My tech stack</h2>
                     </div>
                     <div class="md:border-l-2 overflow-x-hidden">
-                        <div class="timeline-content js--fadeInRight md:pl-10 grid grid-cols-3 md:gap-2 py-10 ">
+                        <div class="timeline-content js--fadeInRight md:pl-10 grid grid-cols-3 gap-10 py-10 ">
+                            <a href="https://www.typescriptlang.org/" target="_blank"><img
+                                    src="../html/image/typescript.svg" alt="Typescript"
+                                    class="mx-auto w-[75px] md:w-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
                             <a href="https://react.dev/" target="_blank"><img src="../html/image/Reactjs.png"
                                     alt="React.js"
-                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                                    class="mx-auto w-[75px] md:w-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
                             <a href="https://tanstack.com/" target="_blank"><img src="../html/image/tanstack.png"
                                     alt="Tanstack"
-                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                                    class="mx-auto w-[75px] md:w-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                            <a href="https://gleam.run/" target="_blank"><img src="../html/image/gleam.svg"
+                                    alt="React.js"
+                                    class="mx-auto w-[75px] md:w-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
                             <a href="https://bun.sh/" target="_blank"><img src="../html/image/bun.svg" alt="React.js"
-                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                                    class="mx-auto w-[75px] md:w-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
                             <a href="https://hono.dev/" target="_blank"><img src="../html/image/hono.webp" alt="Hono"
-                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                                    class="mx-auto w-[75px] md:w-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
                             <a href="https://www.postgresql.org/" target="_blank"><img
                                     src="https://upload.wikimedia.org/wikipedia/commons/2/29/Postgresql_elephant.svg"
                                     alt="Postgres"
-                                    class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                                    class="mx-auto w-[75px] md:w-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
                             <a href="https://vite.dev/" target="_blank"><img src="../html/image/vite.svg" alt="Vite"
-                                    class="mx-auto w-[100px] lg:w-[75px] transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                                    class="mx-auto w-[75px] transition-transform ease-in-out duration-300 hover:scale-125"></a>
                             <a href="https://tailwindcss.com/" target="_blank"><img src="../html/image/tailwind.png"
                                     alt="Tailwind"
-                                    class="mx-auto md:w-[75px] transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                                    class="mx-auto w-[75px] md:w-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
                         </div>
                     </div>
                     <div class="md:pl-10 md:border-l-2 text-2xl py-2">
