148th commit update bio

--- a/html/about/index.html
+++ b/html/about/index.html
@@ -101,8 +101,7 @@
                     <img src="../image/paul_kim.jpg" alt="Paul Kim" class="max-w-30 md:max-w-xs rounded-full">
                     <div>
                         <p class="pt-10 pb-4 px-10">I was born in Belgium, grew up in Switzerland, and I am a
-                            permanent
-                            resident of Canada. My
+                            dual citizen of Switzerland and Canada. My
                             hobbies
                             and passion include fitness, outdoor sports and activities, travelling, playing (and
                             developing)
